Add picture of Cheesecake

--- a/recipes.qmd
+++ b/recipes.qmd
@@ -12,6 +12,8 @@ I want to share my recipes for all my favorite comfort foods with you!
 
 *Classic Cheesecake Recipe*
 
+![Classic Cheesecake](https://static01.nyt.com/images/2021/11/02/dining/dg-Tall-and-Creamy-Cheesecake-copy/dg-Tall-and-Creamy-Cheesecake-superJumbo.jpg)
+
 #### Ingredients:
 
 -   2 cups graham cracker crumbs
